tests/ui/bad_collect_bound.stderr
error[E0277]: the trait bound `NotCollect: Collect` is not satisfied
 --> tests/ui/bad_collect_bound.rs:8:12
  |
8 |     field: NotCollect
  |            ^^^^^^^^^^
  |            |
  |            the trait `Collect` is not implemented for `NotCollect`
  |            the trait `Collect` is not implemented for `NotCollect`
  |
  = help: the following other types implement trait `Collect`:
            &'static T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others

error[E0277]: the trait bound `NotCollect: Collect` is not satisfied
 --> tests/ui/bad_collect_bound.rs:8:5
  |
5 | #[derive(Collect)]
  |          ------- in this derive macro expansion
...
8 |     field: NotCollect
  |     ^^^^^ the trait `Collect` is not implemented for `NotCollect`
  |
  = help: the following other types implement trait `Collect`:
            &'static T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
note: required by a bound in `gc_arena::collect::TraceExt::trace`
 --> src/collect.rs
  |
  |     fn trace<C: Collect + ?Sized>(&mut self, _value: &C);
  |                 ^^^^^^^ required by this bound in `TraceExt::trace`
  = note: this error originates in the derive macro `Collect` (in Nightly builds, run with -Z macro-backtrace for more info)
